--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,10 @@ next-env.d.ts
 # env
 .env
 
-./prisma/dev.db
+# prisma
+javascript/**/migrations/
+typescript/**/migrations/
+misc/**/migrations/
+databases/**/migrations/
+experimental/**/*.db
+dev.db
