--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^9.0.4",
     "react-resizable-panels": "^1.0.7",
     "redux": "^5.0.1",
+    "sha1": "^1.1.1",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
